k8s/todoapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: todoapp
  namespace: todoapp-web-ns
  labels:
    app: todoapp-web
spec:
  containers:
  - name: todoapp
    image: ghcr.io/alex13-th/devops-app:sha-90f2508d84e88f8b28b48da291ef0dd4a200c34c
    resources:
      requests:
        memory: "256Mi"
        cpu: "512m"
      limits:
        memory: "512Mi"
        cpu: "768m"
    ports:
      - containerPort: 8080
    livenessProbe: 
      httpGet:
        path: /api/health
        port: 8080
      initialDelaySeconds: 30
      periodSeconds: 5
      timeoutSeconds: 2
      failureThreshold: 4
  imagePullSecrets:
    - name: ghcr-secret
