k8s/todoapp-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-web-service
  namespace: todoapp-web-ns
spec:
  type: ClusterIP
  selector:
    app: todoapp-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
